--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = 'Main'
+mainClassName = 'urect.questions.Main'
 
-run {}
+run {
+  standardInput = System.in
+}
 
 dependencies {
   testCompile 'junit:junit:4.12'
